--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,29 @@ services:
     depends_on:
       - db
 
+  redis:
+    restart: always
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+  celery:
+    restart: always
+    build: ./app
+    command: celery -A storefront worker -l info
+    volumes:
+      - ./app:/app
+    environment:
+      - DB_HOST=db
+      - DB_NAME=app
+      - DB_USER=postgres
+      - DB_PASS=supersecretpassword
+    depends_on:
+      - db
+      - redis
+      - app
+
   db:
     image: postgres:13-alpine
     volumes:
@@ -31,3 +54,4 @@ services:
 
 volumes:
   dev-db-data:
+  redis-data:
