add celery flower to docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,6 +42,13 @@ services:
       - db
       - redis
       - app
+  flower:
+    image: mher/flower:0.9.7
+    command: ['flower', '--broker=redis://redis:6379/1', '--port=5555']
+    ports:
+      - '5555:5555'
+    depends_on:
+      - redis
 
   db:
     image: postgres:13-alpine
@@ -55,3 +62,4 @@ services:
 volumes:
   dev-db-data:
   redis-data:
+  flower-data:
