--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,10 +21,11 @@ services:
       - db
 
   redis:
+    container_name: redis
     restart: always
     image: redis:latest
     ports:
-      - "6379:6379"
+      - "127.0.0.1:6379:6379"
     volumes:
       - redis-data:/data
   celery:
